Fix error color for better readability

--- a/src/components/LoginPage/_LoginPage.scss
+++ b/src/components/LoginPage/_LoginPage.scss
@@ -74,8 +74,9 @@ input {
 
 
 .login-error {
-  color: darkred;
+  color: red;
   cursor: default;
+  font-size: 1.2rem;
 }
 
 .signup-link {
